# unbounded-repo

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 34b1ea74a364_create_users_table.py
app/: desktop.ini  main.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  user.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/waitlist/: page.tsx
